[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Textures/wood.jpg" type="Texture" id=1]
[ext_resource path="res://Assets/Textures/border1.png" type="Texture" id=2]
[ext_resource path="res://Scenes/UI/PlayerStats/PlayerStats.gd" type="Script" id=3]
[ext_resource path="res://28brownoutline.tres" type="DynamicFont" id=4]
[ext_resource path="res://40brownoutline.tres" type="DynamicFont" id=5]

[node name="PlayerStats" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 71.5 ]
}

[node name="Background" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -345.0
margin_top = -209.0
margin_right = 361.0
margin_bottom = 204.0
rect_min_size = Vector2( 400, 300 )
rect_pivot_offset = Vector2( 148.904, 114.039 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
margin_left = 36.0
margin_top = 30.0
margin_right = 666.0
margin_bottom = 356.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitlePlayerStats" type="Label" parent="Background/VBoxContainer"]
margin_right = 639.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 5 )
text = "Player Stats"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Background/VBoxContainer"]
margin_top = 47.0
margin_right = 639.0
margin_bottom = 67.0
rect_min_size = Vector2( 0, 20 )

[node name="HBoxContainer" type="HBoxContainer" parent="Background/VBoxContainer"]
margin_top = 71.0
margin_right = 639.0
margin_bottom = 305.0

[node name="MarginContainer" type="MarginContainer" parent="Background/VBoxContainer/HBoxContainer"]
margin_right = 35.0
margin_bottom = 234.0
rect_min_size = Vector2( 35, 0 )

[node name="GridContainer" type="GridContainer" parent="Background/VBoxContainer/HBoxContainer"]
margin_left = 39.0
margin_right = 639.0
margin_bottom = 234.0
custom_constants/hseparation = 50
columns = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Background/VBoxContainer/HBoxContainer/GridContainer"]
margin_right = 275.0
margin_bottom = 30.0
custom_constants/separation = 25

[node name="Level" type="Label" parent="Background/VBoxContainer/HBoxContainer/GridContainer/HBoxContainer"]
margin_right = 150.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Level :"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level2" type="Label" parent="Background/VBoxContainer/HBoxContainer/GridContainer/HBoxContainer"]
margin_left = 175.0
margin_right = 275.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 4 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="Background/VBoxContainer/HBoxContainer/GridContainer"]
margin_left = 325.0
margin_right = 600.0
margin_bottom = 30.0
custom_constants/separation = 25

[node name="CritChance" type="Label" parent="Background/VBoxContainer/HBoxContainer/GridContainer/HBoxContainer2"]
margin_right = 150.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Crit Chance :"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CritChance2" type="Label" parent="Background/VBoxContainer/HBoxContainer/GridContainer/HBoxContainer2"]
margin_left = 175.0
margin_right = 275.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 4 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="Background/VBoxContainer/HBoxContainer/GridContainer"]
margin_top = 34.0
margin_right = 275.0
margin_bottom = 64.0
custom_constants/separation = 25

[node name="MaxHealth" type="Label" parent="Background/VBoxContainer/HBoxContainer/GridContainer/HBoxContainer3"]
margin_right = 150.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 4 )
text = "max health :"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxHealth2" type="Label" parent="Background/VBoxContainer/HBoxContainer/GridContainer/HBoxContainer3"]
margin_left = 175.0
margin_right = 275.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 4 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer4" type="HBoxContainer" parent="Background/VBoxContainer/HBoxContainer/GridContainer"]
margin_left = 325.0
margin_top = 34.0
margin_right = 600.0
margin_bottom = 64.0
custom_constants/separation = 25

[node name="CritMulti" type="Label" parent="Background/VBoxContainer/HBoxContainer/GridContainer/HBoxContainer4"]
margin_right = 150.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Crit Multi:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CritMulti2" type="Label" parent="Background/VBoxContainer/HBoxContainer/GridContainer/HBoxContainer4"]
margin_left = 175.0
margin_right = 275.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 4 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer5" type="HBoxContainer" parent="Background/VBoxContainer/HBoxContainer/GridContainer"]
margin_top = 68.0
margin_right = 275.0
margin_bottom = 98.0
custom_constants/separation = 25

[node name="Strength" type="Label" parent="Background/VBoxContainer/HBoxContainer/GridContainer/HBoxContainer5"]
margin_right = 150.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Strength"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Strength2" type="Label" parent="Background/VBoxContainer/HBoxContainer/GridContainer/HBoxContainer5"]
margin_left = 175.0
margin_right = 275.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 4 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer6" type="HBoxContainer" parent="Background/VBoxContainer/HBoxContainer/GridContainer"]
margin_left = 325.0
margin_top = 68.0
margin_right = 600.0
margin_bottom = 98.0
custom_constants/separation = 25

[node name="Evasion" type="Label" parent="Background/VBoxContainer/HBoxContainer/GridContainer/HBoxContainer6"]
margin_right = 150.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Evasion :"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Evasion2" type="Label" parent="Background/VBoxContainer/HBoxContainer/GridContainer/HBoxContainer6"]
margin_left = 175.0
margin_right = 275.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 4 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer7" type="HBoxContainer" parent="Background/VBoxContainer/HBoxContainer/GridContainer"]
margin_top = 102.0
margin_right = 275.0
margin_bottom = 132.0
custom_constants/separation = 25

[node name="Dexterity" type="Label" parent="Background/VBoxContainer/HBoxContainer/GridContainer/HBoxContainer7"]
margin_right = 150.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Dexterity :"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dexterity2" type="Label" parent="Background/VBoxContainer/HBoxContainer/GridContainer/HBoxContainer7"]
margin_left = 175.0
margin_right = 275.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 4 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer8" type="HBoxContainer" parent="Background/VBoxContainer/HBoxContainer/GridContainer"]
margin_left = 325.0
margin_top = 102.0
margin_right = 600.0
margin_bottom = 132.0
custom_constants/separation = 25

[node name="MagicFind" type="Label" parent="Background/VBoxContainer/HBoxContainer/GridContainer/HBoxContainer8"]
margin_right = 150.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Magic Find :"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MagicFind2" type="Label" parent="Background/VBoxContainer/HBoxContainer/GridContainer/HBoxContainer8"]
margin_left = 175.0
margin_right = 275.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 4 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer10" type="HBoxContainer" parent="Background/VBoxContainer/HBoxContainer/GridContainer"]
margin_top = 136.0
margin_right = 275.0
margin_bottom = 166.0
custom_constants/separation = 25

[node name="Intelligence" type="Label" parent="Background/VBoxContainer/HBoxContainer/GridContainer/HBoxContainer10"]
margin_right = 150.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Intelligence :"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Intelligence2" type="Label" parent="Background/VBoxContainer/HBoxContainer/GridContainer/HBoxContainer10"]
margin_left = 175.0
margin_right = 275.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 4 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer13" type="HBoxContainer" parent="Background/VBoxContainer/HBoxContainer/GridContainer"]
margin_left = 325.0
margin_top = 136.0
margin_right = 600.0
margin_bottom = 166.0
custom_constants/separation = 25

[node name="MoveSpeed" type="Label" parent="Background/VBoxContainer/HBoxContainer/GridContainer/HBoxContainer13"]
margin_right = 150.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 4 )
text = "MoveSpeed :"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveSpeed2" type="Label" parent="Background/VBoxContainer/HBoxContainer/GridContainer/HBoxContainer13"]
margin_left = 175.0
margin_right = 275.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 4 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer11" type="HBoxContainer" parent="Background/VBoxContainer/HBoxContainer/GridContainer"]
margin_top = 170.0
margin_right = 275.0
margin_bottom = 200.0
custom_constants/separation = 25

[node name="Attack" type="Label" parent="Background/VBoxContainer/HBoxContainer/GridContainer/HBoxContainer11"]
margin_right = 150.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Attack :"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attack2" type="Label" parent="Background/VBoxContainer/HBoxContainer/GridContainer/HBoxContainer11"]
margin_left = 175.0
margin_right = 275.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 4 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer9" type="HBoxContainer" parent="Background/VBoxContainer/HBoxContainer/GridContainer"]
margin_left = 325.0
margin_top = 170.0
margin_right = 600.0
margin_bottom = 200.0
custom_constants/separation = 25

[node name="Luck" type="Label" parent="Background/VBoxContainer/HBoxContainer/GridContainer/HBoxContainer9"]
margin_right = 150.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Luck :"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Luck2" type="Label" parent="Background/VBoxContainer/HBoxContainer/GridContainer/HBoxContainer9"]
margin_left = 175.0
margin_right = 275.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 4 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer12" type="HBoxContainer" parent="Background/VBoxContainer/HBoxContainer/GridContainer"]
margin_top = 204.0
margin_right = 275.0
margin_bottom = 234.0
custom_constants/separation = 25

[node name="Defense" type="Label" parent="Background/VBoxContainer/HBoxContainer/GridContainer/HBoxContainer12"]
margin_right = 150.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Defense :"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Defense2" type="Label" parent="Background/VBoxContainer/HBoxContainer/GridContainer/HBoxContainer12"]
margin_left = 175.0
margin_right = 275.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 4 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer14" type="HBoxContainer" parent="Background/VBoxContainer/HBoxContainer/GridContainer"]
margin_left = 325.0
margin_top = 204.0
margin_right = 600.0
margin_bottom = 234.0
custom_constants/separation = 25

[node name="Lifesteal" type="Label" parent="Background/VBoxContainer/HBoxContainer/GridContainer/HBoxContainer14"]
margin_right = 150.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Lifesteal :"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lifesteal2" type="Label" parent="Background/VBoxContainer/HBoxContainer/GridContainer/HBoxContainer14"]
margin_left = 175.0
margin_right = 275.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 4 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Border" type="Sprite" parent="."]
position = Vector2( 431.755, 225.031 )
scale = Vector2( 0.426102, 0.232 )
texture = ExtResource( 2 )
